# BazelBot

./: .env.template  .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  Dockerfile.test  Makefile  README.md  alembic.ini  compose-test.yaml  compose.test.yaml  compose.yaml  pyproject.toml  requirements.txt
.github/workflows/: deploy_pipeline.yaml  test_pipeline.yaml
experiments/: google_gemini.py  image_gen.py
migrations/: env.py
migrations/versions/: 5cfa69fff879_create_initial_migration.py  d6a537ea663b_create_initial_migration.py
src/: bazelbot.py  bazels_controller.py  bazels_repo.py  custom_types.py  models.py  prompt.py  types.py  utils.py
src/controllers/: bazels_controller.py  image_generation.py  llm.py
src/database/: bazels_db.py  bazels_db_functions.py  db_functions.py  models.py  session.py  utils.py
src/prompts/: bazel_flavours.py  system.py
src/utils/: custom_types.py  errors.py  functions.py
tests/: conftest.py  test_bazelbot.py  test_bazelbot_llm.py  test_data.txt
