[tool.poetry]
name = "bazelbot"
version = "0.4.0"
description = ""
authors = ["Robin De Smet <robin_de_smet@hotmail.be>"]
readme = "README.md"
packages = [{ include = "src", from = "./" }]

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.1"
pydantic = "^2.7.1"
discord-py = "^2.3.2"
sqlalchemy = "^2.0.30"
alembic = "^1.13.1"
psycopg2-binary = "^2.9.9"
pylint = "^3.2.0"
google-generativeai = "^0.8.3"
pyyaml = "6.0.1"
black = "^24.10.0"
ruff = "^0.8.4"
pillow = "^11.0.0"
pre-commit = "^4.0.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
markers = [
    "llm: Tests where we need communication with one or multiple LLMs.",
]